feat: unit test for ElementMapper.kt